--- a/server/package.json
+++ b/server/package.json
@@ -70,10 +70,9 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "script" : "node index.js"
+    "start" : "node index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "type": "module"
+  "license": "ISC"
 }
